# spendpilot

./: .gitignore  CLAUDE.md  README.md
modeling/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
modeling/configs/: south_german_credit.json
modeling/docs/: architecture.md  data-flow.md  decision-governance.md  feedback-loops.md  model-provenance.md
modeling/examples/: external-cases.json
modeling/src/spendpilot/: __init__.py  cli.py  demo.py
modeling/src/spendpilot/agents/: __init__.py  affordability.py  base.py  credibility.py  credit_risk.py  manager.py
modeling/src/spendpilot/assistants/: __init__.py  contracts.py  local_llama.py  openrouter.py  phi.py  smoke.py  structured.py
modeling/src/spendpilot/benchmark/: __init__.py  south_german.py
modeling/src/spendpilot/ingestion/: __init__.py  backend.py  external.py
modeling/src/spendpilot/models/: __init__.py  contracts.py  credibility_rules.py  features.py  mock.py  registry.py  scorecard.py  xgboost_adapter.py
modeling/src/spendpilot/orchestration/: __init__.py  feedback.py  human_review.py  policy_engine.py  workflow.py
modeling/src/spendpilot/outcomes/: __init__.py  (+1 more)
modeling/tests/: test_backend_input.py  test_demo_workflow.py  test_explainability_report.py  test_feedback_workflow.py  test_local_llama.py  test_manager_assistant.py  test_openrouter_client.py  test_outcome_pipeline.py  test_phi_assistant.py  test_policy_engine.py  test_runtime_scorecard.py  test_south_german_benchmark.py  test_trained_models.py
modeling/tests/fixtures/: south_german_credit_sample.asc
(+131 files in other folders)
